--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -24,7 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.21.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
